...
    android:background="#1F3280"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".DriftVectorCalculator">

    <EditText
        android:id="@+id/ET_windSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:nextFocusDown="@+id/SP_windDirection"
        app:layout_constraintEnd_toStartOf="@+id/TV_windKts"
        app:layout_constraintStart_toEndOf="@+id/TV_windSpeed"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
...
        android:background="@color/colorButton"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_elapsedTimeHrs"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <Spinner
        android:id="@+id/SP_category"
...
        android:ems="10"
        android:hint="00"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:nextFocusDown="@+id/ET_elapsedTimeMins"
        app:layout_constraintEnd_toStartOf="@+id/TV_hrs"
        app:layout_constraintStart_toEndOf="@+id/TV_elapsedTime"
        app:layout_constraintTop_toBottomOf="@+id/ET_currentSpeed" />

    <TextView
        android:id="@+id/TV_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hrs"
...
        android:layout_marginStart="8dp"
        android:text="@string/at"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_currentKts"
        app:layout_constraintEnd_toStartOf="@+id/ET_currentDirection"
        app:layout_constraintStart_toEndOf="@+id/TV_currentKts" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
